syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message DailyPayment{
  string id = 1;
  string student_account_id = 2;
  double date = 3;
  double amount_jpy = 4;
}
