syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message DailyUsage {
  string id = 1;
  string room_id = 2;
  double amount_kwh = 3;
  string amount_kwh_str = 4;
}
